Bug 357675 - Options for "Answer:" and "Operations:" should be radio buttons
Summary: Options for "Answer:" and "Operations:" should be radio buttons
Status: RESOLVED FIXED
Alias: None
Product: kbruch
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Stein
URL:
Keywords:
: 335607 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-01-07 23:25 UTC by Alexander Potashev
Modified: 2017-08-22 18:40 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2016-01-07 23:25:20 UTC
"Answer" (Mixed number / Reduced form) and "Operations" (+, -, /, *) are mutual exclusive options and thus need to be done as radio buttons instead of check boxes. They are currently checkboxes.

Reproducible: Always
Comment 1 Aman Kumar Gupta 2017-08-04 16:36:09 UTC
The bug which you are mentioning here regarding the Operations, its not actually a bug. Rather it is the selection of combination of the operators upon which the questions will be given. As far "Answer" part is concerned, I will try fixing it soon.
Comment 2 Aleix Pol 2017-08-07 13:47:48 UTC
Git commit 3ac24e5a688847f4534d77d92683b802c054da7f by Aleix Pol, on behalf of Aman Kumar Gupta.
Committed on 07/08/2017 at 13:31.
Pushed by apol into branch 'master'.

kbruch- Change QCheckBoxes under "Answer" section to QRadioButtons to avoid multiple checks.

Patch for Bug ID-357657. Replaced QCheckbox objects named "m_AnswerMixedCheck" and  "m_ReducedCheck" to QRadioButton to select only one option in displaying the type of Answer(either Mixed Fraction or Reduced form).

REVIEW: 130217

M  +5    -4    src/MainQtWidget.cpp
M  +3    -2    src/MainQtWidget.h

https://commits.kde.org/kbruch/3ac24e5a688847f4534d77d92683b802c054da7f
Comment 3 Sebastian Stein 2017-08-22 18:40:08 UTC
*** Bug 335607 has been marked as a duplicate of this bug. ***