kbruch- Change QCheckBoxes under "Answer" section to QRadioButtons to avoid multiple checks.

Patch for Bug ID-357657. Replaced QCheckbox objects named "m_AnswerMixedCheck" and  "m_ReducedCheck" to QRadioButton to select only one option in displaying the type of Answer(either Mixed Fraction or Reduced form).

REVIEW: 130217
BUG: 357675